--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "jquery-hammerjs",
-  "title": "jQuery plugin for Hammer.JS",
+  "name": "d3-hammerjs",
+  "title": "d3 plugin for Hammer.JS",
   "description": "A javascript library for multi-touch gestures",
   "version": "1.0.0",
   "homepage": "http://eightmedia.github.com/hammer.js",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/eightmedia/jquery.hammer.js/blob/master/LICENSE"
+      "url": "https://github.com/bollwyvl/d3.hammer.js/blob/master/LICENSE"
     }
   ],
   "keywords": [
-    "jquery",
+    "d3",
     "touch",
     "gestures"
   ],
   "author": {
-    "name": "Jorik Tangelder",
-    "email": "j.tangelder@gmail.com"
+    "name": "Nicholas Bollweg",
+    "email": "nick.bollweg@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/EightMedia/jquery.hammer.js.git"
+    "url": "git://github.com/bollwyvl/d3.hammer.js.git"
   },
   "bugs": {
-    "url": "https://github.com/EightMedia/jquery.hammer.js/issues"
+    "url": "https://github.com/bollwyvl/d3.hammer.js/issues"
   },
   "dependencies": {
     "hammerjs": "1.0.x"
@@ -42,7 +42,7 @@
     "grunt-saucelabs": "4.1.x",
     "hammerjs": "git://github.com/EightMedia/hammer.js.git"
   },
-  "main": "jquery.hammer.js",
+  "main": "d3.hammer.js",
   "engines": {
     "node": ">=0.8.0"
   },
